--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
   cached_network_image: null
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
-  dio: ^5.6.0
   equatable: ^2.0.2
   flutter:
     sdk: flutter
+  flutter_lints: ^5.0.0
   flutter_rating_bar: ^4.0.0
   get_it: ^7.1.3
   go_router: ^14.2.7
