--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   equatable: ^2.0.2
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.2.1
   flutter_lints: ^5.0.0
   flutter_rating_bar: ^4.0.0
   get_it: ^7.1.3
@@ -56,6 +57,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
