--- a/features/watchlist/pubspec.yaml
+++ b/features/watchlist/pubspec.yaml
@@ -1,4 +1,4 @@
-name: core
+name: watchlist
 description: "A new Flutter package project."
 version: 0.0.1
 homepage:
@@ -8,36 +8,13 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  movies:
-    path: ../features/movies
-
-  tv_series:
-    path: ../features/tv_series
-
   flutter:
     sdk: flutter
 
-  cached_network_image: null
-  cupertino_icons: ^1.0.2
-  dartz: ^0.10.0-nullsafety.2
-  equatable: ^2.0.2
-  flutter_dotenv: ^5.2.1
-  flutter_rating_bar: ^4.0.0
-  get_it: ^7.1.3
-  go_router: ^14.2.7
-  google_fonts: ^5.1.0
-  http: ^1.1.0
-  path_provider: ^2.0.2
-  provider: ^6.0.3
-  sqflite: ^2.0.0+3
-
 dev_dependencies:
-  build_runner: ^2.0.4
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  mockito: ^5.0.8
-  sqflite_common_ffi: ^2.3.4
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
