--- a/features/movies/pubspec.yaml
+++ b/features/movies/pubspec.yaml
@@ -19,9 +19,12 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  build_runner: ^2.0.4
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  mockito: ^5.0.8
+  sqflite_common_ffi: ^2.3.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
