--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   equatable: ^2.0.2
   flutter_dotenv: ^5.2.1
   flutter_rating_bar: ^4.0.0
+  flutter_bloc: ^8.1.6
+  bloc: ^8.1.4
   get_it: ^7.1.3
   go_router: ^14.2.7
   google_fonts: ^5.1.0
