--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -25,12 +25,12 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   flutter_bloc: ^8.1.6
   bloc: ^8.1.4
+  bloc_test: ^9.1.7
   get_it: ^7.1.3
   go_router: ^14.2.7
   google_fonts: ^5.1.0
   http: ^1.1.0
   path_provider: ^2.0.2
-  provider: ^6.0.3
   sqflite: ^2.0.0+3
 
 dev_dependencies:
