--- a/features/movies/pubspec.yaml
+++ b/features/movies/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0
   mockito: ^5.0.8
+  mocktail: ^1.0.4
   sqflite_common_ffi: ^2.3.4
 
 # For information on the generic Dart part of this file, see the
