--- a/features/watchlist/pubspec.yaml
+++ b/features/watchlist/pubspec.yaml
@@ -22,9 +22,12 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  build_runner: ^2.0.4
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  mockito: ^5.0.8
+  mocktail: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
