--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -45,9 +45,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # To add assets to your package, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
+    - assets/certificates/certificates.pem
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   #
