--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
 
   get_it: ^7.1.3
   go_router: ^14.2.7
+  firebase_core: ^3.8.0
+  firebase_crashlytics: ^4.1.5
 
 dev_dependencies:
   build_runner: ^2.0.4
@@ -55,9 +57,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/
-    - .env
+  # assets:
+  #   - assets/
+  #   - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
